# FineTuning

./: .gitignore  Makefile  docker-compose.yaml  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: CI.yml  python-app.yml
src/DataPreProcessing/: cleaningStep.py  dataLoading.py  dataPreProcessingController.py  data_utils.py  dataset_loader.py  dataset_reader.py  extractMetaData.py  qualityFilter.py  removeDuplicates.py  standardizer.py  testmongodb.py
src/DataPreProcessing/initdb/: init.js
tests/test_data/: sample.csv  sample.json  sample.parquet
tests/test_data/processed/: processed.csv  processed.json  processed.parquet
tests/unit-tests/: test_cleaning.py  test_integration_simple.py  test_metadata_concurrency.py
