[build-system]
requires = ["setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "src"
version = "0.0.1"
description = "no code agents"
readme = "README.md"
requires-python = ">=3.13,<3.14" #pyarrow doesn't have 3.14 support
keywords = []
authors = []

dependencies = [
    "black", 
    "flake8",
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "pytest-cov",
    "pytest-mock",
    "pytest-timeout",
    "isort"
]