[build-system]
requires = ["setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "FineTuning"
version = "0.0.1"
description = "Lora configs for Agent Forge"
readme = "README.md"
requires-python = ">=3.13,<3.14" #pyarrow doesn't have 3.14 support
keywords = []
authors = []

dependencies = [
    "black", 
    "flake8",
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "pytest-cov",
    "pytest-mock",
    "pytest-timeout",
    "isort"
]


